<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInBtnLogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogInActivity">


    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="340dp"
        android:layout_height="179dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/teal_700"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/welcomeText"
        android:textColor="#7C5122"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logInInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/error_TextView"
        android:layout_width="21dp"
        android:layout_height="42dp"
        android:text="@string/wrongCredentials"
        android:textColor="?attr/colorError"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />


    <TextView
        android:id="@+id/noacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/noaccount"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton_logo" />

    <TextView
        android:id="@+id/sign_up_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up_now"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noacc" />

    <LinearLayout
        android:id="@+id/logInInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/logInButton_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logInIcons"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintUsername"
            android:theme="@style/MyTextInputLayout"
            app:passwordToggleTint="@color/white"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/InputTextUsername"
                style="MyTextInputLayout"
                android:layout_width="227dp"
                android:layout_height="67dp"
                android:theme="@style/MyTextInputLayout"
                app:boxStrokeColor="#267A7F" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:theme="@style/MyTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#267A7F"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/InputTextPassword"
                style="MyTextInputLayout"
                android:layout_width="227dp"
                android:layout_height="67dp"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:theme="@style/MyTextInputLayout"
                app:boxStrokeColor="#267A7F" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logInIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/noacc"
        app:layout_constraintEnd_toStartOf="@+id/logInInfo"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.443">

        <ImageView
            android:id="@+id/usernameLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_24"

            app:tint="@color/teal_700"
            tools:ignore="MissingConstraints" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <ImageView
            android:id="@+id/passwordLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lock_24"

            app:tint="@color/teal_700"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logInButton_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/noacc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInInfo">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/grad_button"
            android:backgroundTint="@color/teal_700"
            android:text="@string/loginButton"
            app:backgroundTint="@null" />

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/ic_baseline_login_24"
            app:tint="@color/teal_700"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:id="@+id/wrongInfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="4dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/logInButton_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>